...
        accessToken: String,
        onSuccess: () -> Unit,
        onError: (String) -> Unit
    ) {
        try {
            if (pushNotificationTopic != null && pushNotificationTopic.message.notification.title.isEmpty())
                throw Exception("Title cannot be empty.")
            if (pushNotificationTopic != null && pushNotificationTopic.message.notification.body.isEmpty())
                throw Exception("Message cannot be empty.")

            val response = if (pushNotificationTopic != null) {
                notificationApi.postNotificationToTopic(
                    headers = hashMapOf(
                        "Authorization" to "Bearer $accessToken",
                        "Content-Type" to "application/json"
...
