...
        post: Post,
        context: Context,
        onSuccess: () -> Unit,
        onError: (String) -> Unit
    ) {
        try {
            if (post.description.isBlank()) throw Exception("Description cannot be empty.")
            if (post.description.length > 300) throw Exception("Your description exceeds 300 characters.")
            if (post.images.size > 4) throw Exception("You can only select up to 4 images.")

            val images: MutableList<String> = mutableListOf()
            if (post.images.isNotEmpty()) {
                // Get download urls for all images
                post.images.forEach { image ->
...
